--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -1,16 +1,13 @@
 <div class="wrapper pink">
     <div class="main">
         <!-- <h1>Realtime Audio Reactive Experiences</h1> -->
-        <h1>Audio Reactive Visuals For Streams</h1>
+        <h1>Audio Reactive VJ Software for Streams &amp; Events</h1>
         <h2>
-            Control realtime visuals in any OBS/Zoom live stream or event <strong>remotely</strong>
+            Quickly create and control realtime audio reactive visuals in any OBS/Zoom stream or live event <strong>remotely</strong>
             or in-person.
         </h2>
         <h2>
-            Create realtime audio reactive
-            visualizations and experiences quickly and easily.
-            Intended for VJs, DJs, Bands, Artists, Live Streams, Events, and Venues.
-            <!-- Free visual composition tools for live events &amp; streams. Hey DJs, VJs, Artists, and Venues. -->
+            Intended for VJs, DJs, Bands, Artists, Streams, Events, and Venues.
         </h2>
         <a routerLink="/download" class="download">GET IT NOW</a><Br>
         <!-- <a routerLink="/start" class="download">NEW LIVE STREAM TOOL</a><br> -->
@@ -60,7 +57,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-2.1.6.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-2.1.7.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -69,7 +66,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-Setup-2.1.6.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-Setup-2.1.7.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -77,12 +74,42 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.1.6</h1>
+            <h1>VISUALZ v2.1.7</h1>
 
             <div class="">
                 <iframe width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
+
+                <!-- 03/19/2021 -->
+                <h2>Update 2.1.7</h2>
+                <ul class='new'>
+                    <li>Batch import media added.</li>
+                    <li>Cue clips and tracks with MIDI control.</li>
+                    <li>Blackout button.</li>
+                    <li>Added more audio reactive fx options.</li>
+                    <li>Beat now resets on manual scene change</li>
+                    <li>Replicate scene with fx.</li>
+                    <li>Replicate track with fx.</li>
+                    <li>Set file extension is now .visualzset</li>
+                    <li>Track file extension is now .visualztrack</li>
+                    <li>Supports legacy file opening.</li>
+                    <li>Upgrade font manager.</li>
+                    <li>New transform effect.</li>
+                    <li>New universal effects in addition to clip effects.</li>
+                    <li>Optimized set &amp; track generation.</li>
+                    <li>Optimized media import.</li>
+                    <li>Optimized gif->mp4 conversion.</li>
+                    <li>Optimized mobile device cam.</li>
+                    <li>Fixed bugs in FanCam, Mobile Controller, & Remote Screen.</li>
+                    <li>Fixed bugs with reopening certain sets.</li>
+                    <li>Fixed upload to cloud bugs.</li>
+                    <li>Fixed transition on 8x, 16x, 32x, 48x, 64x issue</li>
+                    <li>Fixed thumbnail bugs.</li>
+                    <li>Added 7 day free pro tial.</li>
+                    <li>UI/UX overhaul.</li>
+                    <li>Added info windows and tooltips.</li>
+                </ul>
 
                 <!-- 12/9/20 -->
                 <h2>System/Website Update</h2>
