--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.1.6<br>
+        Download VISUALZ v2.1.7<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-2.1.6.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-2.1.7.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
@@ -40,7 +40,7 @@
                 SSD drive recommended for movie playback
             </p>
             <p>
-                Internet Connection
+                Internet Connection. Minimum speed for streaming features 200/kbps
             </p>
         </div>
     </div>
@@ -49,7 +49,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.6/Visualz-Setup-2.1.6.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-Setup-2.1.7.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download Windows
         </a>
@@ -86,16 +86,16 @@
                 SSD drive recommended for movie playback
             </p>
             <p>
-                Internet Connection
+                Internet Connection. Minimum speed for streaming features 200/kbps
             </p>
         </div>
     </div>
-
+<!-- 
     <div class="slider">
         <mat-slide-toggle class="example-margin" (change)="onChange($event)" [checked]="yearly" [disabled]="false">
             Yearly
         </mat-slide-toggle>
-    </div>
+    </div> -->
     <div class="clearfix"></div>
 
     <div class="content-wrapper dark clearfix">
@@ -106,9 +106,14 @@
                 <span class="price">FREE</span>
             </div>
             <ul class="features">
-
+                <li>Batch import media.</li>
+                <li>MIDI controller support.</li>
+                <li>Blackout button.</li>
+                <li>Replicate scene with fx.</li>
+                <li>Replicate track with fx.</li>
+                <li>7 day free pro tial.</li>
                 <li>Music video recorder (watermarked).</li>
-                <li>Record &amp; reuse feature.</li>
+                <li>Record &amp; reuse (looping) feature.</li>
                 <li>Compose sets &amp; tracks of visual media.</li>
                 <li>Manual &amp; automated audio reactive scene transitioning.</li>
                 <li>Audio analysis and beat detection.</li>
@@ -119,7 +124,7 @@
                 <li>Enhanced streaming connectivity with Ice & Turn server negotiation.</li>
                 <li>Auto reconnect and persistant stream urls.</li>
                 <li>Camera support.</li>
-                <li>Streaming mobile video support.</li>
+                <li>Mobile Device camera support.</li>
                 <li>Smartphone remote control.</li>
                 <li>Gif &amp; image search.</li>
                 <li>CC video library.</li>
@@ -128,11 +133,10 @@
                 <li>Automatic Updates</li>
                 <li><s>Max output resolution 1280x1280.</s></li>
                 <li>Output resolution specification.</li>
-
             </ul>
         </div>
 
-        <div class="price_card">
+        <!-- <div class="price_card">
             <div class="header">
                 <span class="name">EDUCATIONAL</span>
                 <span class="desc">For schools, faculty and students. Not for paying projects.</span>
@@ -153,23 +157,23 @@
                 </button>
             </div>
 
-            <!-- TEST EDUCATIONAL LICENCSE
+            TEST EDUCATIONAL LICENCSE
             <div [hidden]="testMode === false">
                 <button color="primary" class="pink" id="checkout-button-plan_H5UfUDScLylpyD" role="link"
                     mat-raised-button>
                     TEST Buy Educational License
                 </button>
-            </div> -->
-        </div>
+            </div>
+        </div> -->
 
         <div class="price_card">
             <div class="header">
                 <span class="name">COMMERCIAL</span>
                 <span class="desc">Fully featured and for use in paying projects, and at venues.</span>
-                <span class="price"><s style="color:#333;">$40</s> $48 yearly</span>
+                <span class="price">$48 yearly</span>
             </div>
             <ul class="features">
-                <li><strong>New Low Price<br>$48 yearly</strong></li>
+                <li><strong>New Price<br>$48 yearly</strong></li>
                 <li>All the non-commercial features plus:</li>
                 <li>Global turn &amp; stun servers.</li>
                 <li>Dedicated peer-to-peer negotiation.</li>
@@ -203,7 +207,7 @@
 
             <!-- PROD COMMERCIAL LICENSE -->
             <div [hidden]="testMode === true">
-                <button color="primary" class="pink" id="checkout-button-plan_HCHnNpbdcUHUCL" role="link"
+                <button color="primary" class="pink" id="checkout-button-price_1IUyyVKBQoT2WTQqKkm8wq1S" role="link"
                     mat-raised-button>
                     Buy Commercial License Special
                 </button>
@@ -234,7 +238,7 @@
         <div class='clearfix'></div>
 
         <br><br>
-        <a class="button" class="pink" target="_blank" href="https://github.com/madchops1/visualz-releases/releases"
+        <a class="button" style="float:right;" class="pink" target="_blank" href="https://github.com/madchops1/visualz-releases/releases"
             role="link" mat-raised-button>
             Older Versions
         </a>
