--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -2,7 +2,11 @@
     <div class="content-inner-wrapper">
 
         <h1 class="center">USER GUIDE</h1>
-
+        <p style="font-size: 18px !important; line-height: 26px;" ><strong>
+            In the latest version, v2.1.7., the VISUALZ interface has changed. 
+            Many new features have been added, eg. universal effects. 
+            Thanks for your patience while we update the tutorials and user guides.
+        </strong></p>
         <app-how-a></app-how-a>
         <div class="clearfix"></div>
 
