--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -1,6 +1,11 @@
 <div class="content-wrapper normal">
     <div class="content-inner-wrapper">
         <h1 class="center">START HERE</h1>
+        <p style="font-size: 18px !important; line-height: 26px;" ><strong>
+            In the latest version, v2.1.7., the VISUALZ interface has changed. 
+            Many new features have been added, eg. universal effects. 
+            Thanks for your patience while we update the tutorials and user guides.
+        </strong></p>
         <p>
             Welcome to Visulz. When you open the app click new set. A new track with some content will be created for
             you automatically. You can
