--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -77,7 +77,10 @@
             <h1>VISUALZ v2.1.7</h1>
 
             <div class="">
-                <iframe width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
+
+                <img src="../../assets/images/macbook.png" style="width: 500px; margin: 0px 0 25px -55px; padding: 0px;" />
+
+                <iframe style="margin-bottom: 10px;" width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
