--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -3,7 +3,7 @@
 
         <h1 class="center">USER GUIDE</h1>
         <p style="font-size: 18px !important; line-height: 26px;" ><strong>
-            In the latest version, v2.1.7., the VISUALZ interface has changed. 
+            Since version 2.1.7 the VISUALZ interface has changed slightly. 
             Many new features have been added, eg. universal effects. 
             Thanks for your patience while we update the tutorials and user guides.
         </strong></p>
