--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -57,7 +57,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-2.1.7.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.8/Visualz-2.1.8.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download Mac
                 </a>
@@ -66,7 +66,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-Setup-2.1.7.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.8/Visualz-Setup-2.1.8.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download Windows
                 </a>
@@ -74,7 +74,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.1.7</h1>
+            <h1>VISUALZ v2.1.8</h1>
 
             <div class="">
 
@@ -83,6 +83,13 @@
                 <iframe style="margin-bottom: 10px;" width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
+
+
+                <!-- 04/03/2021 -->
+                <h2>Update 2.1.8</h2>
+                <ul class='new'>
+                    <li>Bugfixes</li>
+                </ul>
 
                 <!-- 03/19/2021 -->
                 <h2>Update 2.1.7</h2>
