--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.1.7<br>
+        Download VISUALZ v2.1.8<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-2.1.7.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.8/Visualz-2.1.8.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download For Mac
         </a>
@@ -49,7 +49,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.7/Visualz-Setup-2.1.7.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.8/Visualz-Setup-2.1.8.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download Windows
         </a>
@@ -173,20 +173,21 @@
                 <span class="price">$48 yearly</span>
             </div>
             <ul class="features">
-                <li><strong>New Price<br>$48 yearly</strong></li>
                 <li>All the non-commercial features plus:</li>
-                <li>Global turn &amp; stun servers.</li>
-                <li>Dedicated peer-to-peer negotiation.</li>
+                <li>Music video recorder (NO watermark).</li>
+                <li>Audience contact collection.</li>
+                <li>Realtime fan engagement. (FanCam selfies).</li>
+                <li>Mobile device controller.</li>
+                <li>Store media in the cloud & share sets.</li>
+                <li>Remote Streaming / Stream to browser (NO watermark).</li>
+                <li>
+                    Global turn &amp; stun servers for realtime global and mobile 
+                    streaming with dedicated peer-to-peer negotiation.
+                </li>
                 <li>
                     These new features mean near 100% reliability for
                     streaming to the browser, fanCam, mobile video, and more.
                 </li>
-                <li>Music video recorder (NO watermark).</li>
-                <li>Audience contact collection.</li>
-                <li>Fan Selfies (FanCam).</li>
-                <li>Mobile device controller.</li>
-                <li>Store media in the cloud.</li>
-                <li>Remote Streaming / Stream to browser (NO watermark).</li>
             </ul>
 
             <!-- PROD COMMERCIAL LICENSE
