--- a/src/app/how/how.component.html
+++ b/src/app/how/how.component.html
@@ -2,7 +2,7 @@
     <div class="content-inner-wrapper">
         <h1 class="center">START HERE</h1>
         <p style="font-size: 18px !important; line-height: 26px;" ><strong>
-            In the latest version, v2.1.7., the VISUALZ interface has changed. 
+            Since version 2.1.7 the VISUALZ interface has changed slightly. 
             Many new features have been added, eg. universal effects. 
             Thanks for your patience while we update the tutorials and user guides.
         </strong></p>
