--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -106,14 +106,6 @@
                 <span class="price">FREE</span>
             </div>
             <ul class="features">
-                <li>Batch import media.</li>
-                <li>MIDI controller support.</li>
-                <li>Blackout button.</li>
-                <li>Replicate scene with fx.</li>
-                <li>Replicate track with fx.</li>
-                <li>7 day free pro tial.</li>
-                <li>Music video recorder (watermarked).</li>
-                <li>Record &amp; reuse (looping) feature.</li>
                 <li>Compose sets &amp; tracks of visual media.</li>
                 <li>Manual &amp; automated audio reactive scene transitioning.</li>
                 <li>Audio analysis and beat detection.</li>
@@ -130,9 +122,15 @@
                 <li>CC video library.</li>
                 <li>3d audio reactive visualizations.</li>
                 <li>Multiple screens.</li>
-                <li>Automatic Updates</li>
-                <li><s>Max output resolution 1280x1280.</s></li>
-                <li>Output resolution specification.</li>
+                <li>Music video recorder (watermarked).</li>
+                <li>Record &amp; reuse (looping) feature.</li>
+                <li>Batch import media.</li>
+                <li>Blackout button.</li>
+                <li>Replicate scene with fx.</li>
+                <li>Replicate track with fx.</li>
+                <li>7 day free pro trial.</li>
+                <li>Automatic Updates.</li>
+                <li>Unlimited output resolution.</li>
             </ul>
         </div>
 
@@ -174,12 +172,13 @@
             </div>
             <ul class="features">
                 <li>All the non-commercial features plus:</li>
+                <li>MIDI controller support.</li>
+                <li>Remote Streaming / BrowserStream (NO watermark).</li>
+                <li>Store media in the cloud & share sets.</li>
                 <li>Music video recorder (NO watermark).</li>
                 <li>Audience contact collection.</li>
                 <li>Realtime fan engagement. (FanCam selfies).</li>
                 <li>Mobile device controller.</li>
-                <li>Store media in the cloud & share sets.</li>
-                <li>Remote Streaming / Stream to browser (NO watermark).</li>
                 <li>
                     Global turn &amp; stun servers for realtime global and mobile 
                     streaming with dedicated peer-to-peer negotiation.
