--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,19 +18,26 @@
             </p>
 
             <p>
-                Our founders combined these passions into the audio reactive software platform, VISUALZ. Designed for
-                live streams, events, and installations. Built using web technologies such as WebGL, Web Audio, WebRTC,
-                and custom shaders.
+                Our founders combined these passions into the audio reactive VJ software platform, VISUALZ. Designed for
+                live streams, events, and installations. 
+                Compose your sets ahead of time or VJ in realtime, 
+                and optionally stream your output anywhere in the world over 
+                the browser or to OBS. 
+            </p>
+            
+            <p>
+                VISUALZ is built using web technologies such as WebGL, Web Audio, WebRTC,
+                and other black magic...
             </p>
 
             <p>
-                …and now <a href="" target="_blank">VISUALZ WEAR</a>, a line of high-end wearable audio reactive LED
-                jewelry.
+                Announcing <a href="" target="_blank">VISUALZ WEAR</a>, a line of high-end wearable audio reactive LED
+                wearables/jewelry.
             </p>
 
             <p>
-                When not building software or wearables. We're doing events, installations, streams, and more. Contact
-                contact@visualzstudio.com to collab or hire us.
+                When not building software or wearables. We're doing festivals, streams, clubs, events, installations, and more. Contact
+                contact@visualzstudio.com to collaborate or hire us.
             </p>
 
             <h2>Reach Out</h2>
