--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -49,7 +49,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/9/Visualz-Setup-2.1.9.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.9/Visualz-Setup-2.1.9.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download for Windows
         </a>
