--- a/src/app/user-guide/user-guide.component.html
+++ b/src/app/user-guide/user-guide.component.html
@@ -69,7 +69,7 @@
                 method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                 target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                    <input style="width:50vw; height:80px; display:block; margin: 0px auto; font-size:35px;"
+                    <input class="email-component" style="height:80px; display:block; margin: 0px auto; font-size:35px;"
                         type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address"
                         required>
                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
