--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.1.9<br>
+        Download VISUALZ v2.2.0<br>
         Free for Non-Commercial Use
     </h1>
 
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.9/Visualz-2.1.9.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download for Mac
         </a>
@@ -49,7 +49,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.1.9/Visualz-Setup-2.1.9.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-Setup-2.2.0.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download for Windows
         </a>
@@ -98,7 +98,7 @@
     </div> -->
     <div class="clearfix"></div>
 
-    <div class="content-wrapper dark clearfix">
+    <div class="dark clearfix">
         <div class="price_card">
             <div class="header">
                 <span class="name">NON-COMMERCIAL</span>
@@ -241,11 +241,11 @@
 
         <div class='clearfix'></div>
 
-        <br><br><br>
+        <br><br>
         <a class="button center" style="margin: 20px auto -50px; display: block; width: 50%;" class="" target="_blank" href="https://github.com/madchops1/visualz-releases/releases"
             role="link" mat-raised-button>
             Older Versions
         </a>
-
+        <br><br><br>
 
     </div>
