--- a/src/app/download/download.component.scss
+++ b/src/app/download/download.component.scss
@@ -105,10 +105,11 @@ mat-grid-tile {
     padding: 20px;
 
     .price{
-        font-size: 30px;
+        font-size: 24px;
         display: block;
         text-align: center;
         padding: 30px 0 10px;
+        line-height: 30px;
     }
 
     .name{
