--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -95,8 +95,13 @@
                 <!-- 06/27/2022 -->
                 <h2>NEW Update 2.2.0</h2>
                 <ul class='new'>
-                    <li>Some performance enhancements.</li>
-                    <li>New particle fx.</li>
+                    <li>Major performance enhancements for both windows & mac.</li>
+                    <li>New particle field fx.</li>
+                    <li>Beat overide per individual scene.</li>
+                    <li>Support for .mov/conversion.</li>
+                    <li>Bugfix in replicated track fx.</li>
+                    <li>Added stretch to fix for width and height in transorm fx.</li>
+                    <li>Bugfix for .jpeg media scenes.</li>
                 </ul>
 
                 <!-- 03/29/2022 -->
