fix download link

--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -8,7 +8,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0-x64.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download for Mac
         </a>
