--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -65,7 +65,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0-x64.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download for Mac
                 </a>
