--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <div *ngIf="!interactive" class="msg">
-    <a href="">**NEW** VISUALZ v2.2.0 - Major Performance Enhancements!</a>
+    <a href="">**NEW 7/29/2022** VISUALZ v2.2.1 - Bugfixes &amp; Performance Enhancements!</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
@@ -136,7 +136,7 @@
         <a href="https://twitter.com/visualzapp" target="_blank">TWITTER</a>
         <br>
 
-        v2.2.0 By <a href="https://karl.pb.studio" target="_blank">Karl John Steltenpohl</a>
+        v2.2.1 By <a href="https://karl.pb.studio" target="_blank">Karl John Steltenpohl</a>
     </div>
 
     <div class="gradient">
