--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -65,7 +65,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-2.2.0-x64.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.1/Visualz-2.2.1-x64.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download for Mac
                 </a>
@@ -74,7 +74,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.0/Visualz-Setup-2.2.0.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.1/Visualz-Setup-2.21.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download for Windows
                 </a>
@@ -82,7 +82,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.2.0</h1>
+            <h1>VISUALZ v2.2.1</h1>
 
             <div class="">
 
@@ -92,8 +92,17 @@
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe> -->
 
+                <!-- 07/29/2022 -->
+                <h2>NEW Update 2.2.1</h2>
+                <ul class='new'>
+                    <li>Bugfix to realtime slider motion in FX panels.</li>
+                    <li>Added anti-aliasing toggle to controls.</li>
+                    <li>Bugfix to video loopstation.</li>
+                    <li>Bugfix for .mp4 files in Windows version.</li>
+                </ul>
+
                 <!-- 06/27/2022 -->
-                <h2>NEW Update 2.2.0</h2>
+                <h2>Previous Update 2.2.0</h2>
                 <ul class='new'>
                     <li>Major performance enhancements for both windows & mac.</li>
                     <li>New particle field fx.</li>
@@ -105,7 +114,7 @@
                 </ul>
 
                 <!-- 03/29/2022 -->
-                <h2>Update 2.1.9</h2>
+                <h2>Previous Update 2.1.9</h2>
                 <ul class='new'>
                     <li>A year in development version 2.1.9 has the features you've been waiting for.</li>
                     <li>Enhanced transitions and added multiple transition types and controls.</li>
