--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -97,7 +97,7 @@
                 <ul class='new'>
                     <li>Allow for higher output resolution.</li>
                     <li>STROBE FX!!! Color overlay strobe & dotscreen Strobe.</li>
-                    <li>Color overlay audio FX added.<li>
+                    <li>Color overlay audio FX added.</li>
                     <li>
                         Video processing has been moved from the cloud to "inside the computer". 
                         This makes transcoding, recording, music videos, and the loop station feature work 
