--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <div *ngIf="!interactive" class="msg">
-    <a href="">**NEW 10/5/2022** VISUALZ v2.2.2 - Major Enhancements!</a>
+    <a href="">NEW * VISUALZ v2.2.3 * Cool new stuff!</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
