--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -65,7 +65,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.2/Visualz-2.2.2-x64.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-2.2.3-x64.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download for Mac
                 </a>
@@ -74,7 +74,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.2/Visualz-Setup-2.2.2.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-Setup-2.2.3.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download for Windows
                 </a>
@@ -82,7 +82,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.2.2</h1>
+            <h1>VISUALZ v2.2.3</h1>
 
             <div class="">
 
@@ -92,10 +92,17 @@
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe> -->
 
-                <!-- 10/5/2022 -->
-                <h2>NEW Update 2.2.2</h2>
+                <!-- 10/22/2022 -->
+                <h2>NEW Update 2.2.3</h2>
                 <ul class='new'>
-                    <li>Allow for higher output resolution.</li>
+                    <li>Open set enhancements.</li>
+                    <li>Bugfixes.</li>
+                </ul>    
+                
+                <!-- 10/5/2022 -->
+                <h2>Update 2.2.2</h2>
+                <ul class='new'>
+                    <li>Improved output quality.</li>
                     <li>STROBE FX!!! Color overlay strobe & dotscreen Strobe.</li>
                     <li>Color overlay audio FX added.</li>
                     <li>
