--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <div *ngIf="!interactive" class="msg">
-    <a href="">NEW * VISUALZ v2.2.3 * Cool new stuff!</a>
+    <a routerLink="/download">🔥 Black Friday Deal - Get VISUALZ 50% Off - That's just $24 🔥</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
