--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,14 @@ p {
     margin-bottom: 20px;
 }
 
+
+.green {
+    background-color: #adff2f !important;
+    color: #000 !important;
+
+}
+
+
 .pink {
     background-color: #ff0042;
     color: #fff;
