--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,10 +17,10 @@
             </p>
             <p>
                 These passions were combined to create the audio reactive graphics software, VISUALZ. Designed for
-                VJs, videos, events, concerts, live streams, and installations. 
+                VJs, videos, events, concerts, live streams, videos, and installations. 
             </p>    
             <p>   
-                Compose your sets in advance or VJ live and in realtime. 
+                Compose your sets in advance or VJ live in realtime. 
                 You can optionally stream your output anywhere in the world over 
                 the browser or to OBS or any Smart TV. 
             </p>
