--- a/src/app/download/download.component.html
+++ b/src/app/download/download.component.html
@@ -1,8 +1,8 @@
 <div class="content-wrapper normal">
     <h1 class="center">
-        Download VISUALZ v2.2.3<br>
+        Download VISUALZ v2.2.4<br>
         Free for Non-Commercial Use<br>
-        🔥 Black Friday Deal - Get VISUALZ 50% Off - That's just $24 🔥<br>
+        🔥 Deal Stands Until The New Year - Get VISUALZ 50% Off - That's just $24 🔥<br>
     </h1>
 
     <div [hidden]="testMode === true">
@@ -24,7 +24,7 @@
 
     <div class="bordered">
         <img class="mac" src="../../assets/images/macos.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-2.2.3-x64.dmg"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-2.2.4-x64.dmg"
             target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
             Download for Mac
         </a>
@@ -65,7 +65,7 @@
 
     <div class="bordered">
         <img class="windows" src="../../assets/images/windows.png" />
-        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-Setup-2.2.3.exe"
+        <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-Setup-2.2.4.exe"
             mat-raised-button class="pink button" target="_blank" (click)="downloadWindows()">
             Download for Windows
         </a>
@@ -123,15 +123,19 @@
             </div>
             <ul class="features">
                 <li>Compose sets &amp; tracks of visual media.</li>
-                <li>Manual &amp; automated audio reactive scene transitioning.</li>
-                <li>*New enhanced scene transitioning and control.</li>
                 <li>Audio analysis and beat detection.</li>
                 <li>Visual effects.</li>
-                <li>*Lots of new FX.</li>
-                <li>*New audio reactive visualizers.</li>
+                <li>Auto audio reactive scene transitioning.</li>
+                <li><strong>New</strong>Streams to external windows and browser in the background or while minimized.</li>
+                <li><strong>New</strong>Desktop and window capture sources.</li>
+                <li><strong>New</strong> Video file probe and optimization.</li>
+                <li><strong>New</strong> enhanced scene transitioning and control.</li>
+                <li><strong>New</strong> Lots of new FX.</li>
+                <li><strong>New</strong> audio reactive visualizers.</li>
                 <li>Fractals</li>
                 <li>Audio reactive visual effects.</li>
-                <li>Remote Streaming / Stream to browser (watermarked).</li>
+                <li>Stream to external window / additional displays (NO watermark).</li>
+                <li>Stream to browser (watermarked).</li>
                 <li>OBS &amp; Zoom integration.</li>
                 <li>Enhanced streaming connectivity with Ice & Turn server negotiation.</li>
                 <li>Auto reconnect and persistant stream urls.</li>
@@ -143,14 +147,15 @@
                 <li>3d audio reactive visualizations.</li>
                 <li>Multiple screens.</li>
                 <li>Music video recorder (watermarked).</li>
-                <li>Record &amp; reuse (looping) feature.</li>
+                <li>Video loop station.</li>
                 <li>Batch import media.</li>
                 <li>Blackout button.</li>
                 <li>Replicate scene with fx.</li>
-                <li>Replicate track with fx.</li>
+                <li>Replicate track with fx.</li>                
                 <li>7 day free pro trial.</li>
                 <li>Automatic Updates.</li>
                 <li>Unlimited output resolution.</li>
+                <li>And lots more...</li>
             </ul>
         </div>
 
