--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -65,7 +65,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-2.2.3-x64.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-2.2.4-x64.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download for Mac
                 </a>
@@ -74,7 +74,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.3/Visualz-Setup-2.2.3.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-Setup-2.2.4.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download for Windows
                 </a>
@@ -82,7 +82,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.2.3</h1>
+            <h1>VISUALZ v2.2.4</h1>
 
             <div class="">
 
@@ -91,6 +91,26 @@
                 <iframe style="margin-bottom: 10px;" width="100%" height="240" src="https://www.youtube.com/embed/UyZFcEHbCBM?rel=0&amp;controls=0"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe> -->
+
+                
+
+                <!-- 12/25/2022 -->
+                <h2>NEW Update 2.2.4</h2>
+                <ul class='new'>
+                    <li>🔥 Improved threading and cpu optimization.</li>
+                    <li>🔥 Streams to external windows and browser in the background or while minimized.</li>
+                    <li>🔥 Added desktop and window capture sources.</li>
+                    <li>🪩 Added mirror fx beat toggle feature.</li>
+                    <li>Added video file probe.</li>
+                    <li>Added video file opimization.</li>
+                    <li>Improved video encoding across the board.</li>
+                    <li>Smoother track to track transitioning.</li>
+                    <li>😎 User Request: Random order option.</li>
+                    <li>🫠 User Request: Auto go to next track option.</li>
+                    <li>Fixed undo.</li>
+                    <li>Undo now works for effects changes.</li>
+                    <li>🪲 Other bugfixes.</li>
+                </ul>    
 
                 <!-- 10/22/2022 -->
                 <h2>NEW Update 2.2.3</h2>
