--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 </div>
 
 <div *ngIf="!interactive" class="msg">
-    <a routerLink="/download">🔥 Black Friday Deal - Get VISUALZ 50% Off - That's just $24 🔥</a>
+    <a routerLink="/download">🔥 v2.2.4 RELEASED - 50% Off Deal Stands Until The New Year - That's just $24 🔥</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
@@ -136,7 +136,7 @@
         <a href="https://twitter.com/visualzapp" target="_blank">TWITTER</a>
         <br>
 
-        v2.2.3 By <a href="https://www.instagram.com/vj_karl/" target="_blank">Karl John Steltenpohl</a>
+        v2.2.4 By <a href="https://www.instagram.com/vj_karl/" target="_blank">Karl John Steltenpohl</a>
     </div>
 
     <div class="gradient">
