--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,3 +59,9 @@ $breakpoint-mobile: 768px;
     text-decoration: none;
     color: #fff;
 }
+
+.top-button-link {
+    color: #333;
+    text-decoration: none;
+    display: block;
+}
