--- a/src/styles.scss
+++ b/src/styles.scss
@@ -410,8 +410,8 @@ p {
             text-align: center;
 
             h1 {
-                line-height: 60px;
-                margin: 0px;
+                line-height: 25px;
+                margin: 0px 0 20px 0;
                 font-size: 23px;
                 //letter-spacing: -1px;
                 //white-space: nowrap;
