--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,11 @@
 <div *ngIf="menu && !interactive" class="mobile-menu">
     <button mat-button routerLink="/">HOME</button>
     <button mat-button routerLink="/download">GET IT NOW</button>
+    <button mat-button>
+        <a class="top-button-link" target="_blank" href="https://linktr.ee/visualzapp">
+            EXAMPLES
+        </a>
+    </button>
     <!-- <button mat-button routerLink="https://graphics.visualzstudio.com">GRAPHICS</button> -->
     <!-- <button mat-button><a href="https://gear.visualzstudio.com">GEAR</a></button> -->
 
@@ -31,6 +36,11 @@
 
         <button mat-button routerLink="/">HOME</button>        
         <button mat-button routerLink="/download">GET IT NOW</button>
+        <button mat-button>
+            <a class="top-button-link" target="_blank" href="https://linktr.ee/visualzapp">
+                EXAMPLES
+            </a>
+        </button>
         <!-- <button mat-button routerLink="https://graphics.visualzstudio.com">GRAPHICS</button> -->
         <!-- <button mat-button><a href="https://gear.visualzstudio.com">GEAR</a></button> -->
 
@@ -102,7 +112,7 @@
         </a>
         <br>
 
-        &copy; VISUALZ Copyright 2018-2022. All Rights Reserved.
+        &copy; VISUALZ Copyright 2018-2023. All Rights Reserved.
         <br>
     </div>
 
@@ -111,6 +121,8 @@
         <!-- <a routerLink="/events">Events</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
         <a routerLink="/">HOME</a> &nbsp;&nbsp;|&nbsp;&nbsp;
         <a routerLink="/download">GET IT NOW</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a target="_blank" href="https://linktr.ee/visualzapp">EXAMPLES</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+        
         <!-- <a routerLink="/examples">EXAMPLES</a> &nbsp;&nbsp;|&nbsp;&nbsp; -->
         <!-- <a href="https://vjpacks.visualzstudio.com">VJ PACKS</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
         <!-- <a href="https://gear.visualzstudio.com">GEAR</a>&nbsp;&nbsp;|&nbsp;&nbsp; -->
