--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 </div>
 
 <div *ngIf="!interactive" class="msg">
-    <a routerLink="/download">🔥 v2.2.4 RELEASED - 50% Off Deal Stands Until The New Year - That's just $24 🔥</a>
+    <a routerLink="/download">🔥 v2.2.5 RELEASED - 50% Off Deal Still Going But Ends Soon. - That's just $24 🔥</a>
 </div>
 <header *ngIf="!interactive">
     <a routerLink="/" class="logo">VISUALZ</a>
@@ -148,7 +148,7 @@
         <a href="https://twitter.com/visualzapp" target="_blank">TWITTER</a>
         <br>
 
-        v2.2.4 By <a href="https://www.instagram.com/vj_karl/" target="_blank">Karl John Steltenpohl</a>
+        v2.2.5 By <a href="https://www.instagram.com/vj_karl/" target="_blank">Karl John Steltenpohl</a>
     </div>
 
     <div class="gradient">
