--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -65,7 +65,7 @@
             <!-- <div *ngIf="deviceInfo.os == 'Mac' || deviceInfo.os == 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="mac" src="../../assets/images/macos.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-2.2.4-x64.dmg"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.5/Visualz-2.2.5-x64.dmg"
                     target="_blank" mat-raised-button (click)="downloadMac()" class="pink button">
                     Download for Mac
                 </a>
@@ -74,7 +74,7 @@
             <!-- <div *ngIf="deviceInfo.os != 'Mac' && deviceInfo.os != 'iOS'" class="clearfix"> -->
             <div class="clearfix">
                 <img class="windows" src="../../assets/images/windows.png" />
-                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.4/Visualz-Setup-2.2.4.exe"
+                <a href="https://github.com/madchops1/visualz-releases/releases/download/v2.2.5/Visualz-Setup-2.2.5.exe"
                     target="_blank" mat-raised-button (click)="downloadWindows()" class="pink button">
                     Download for Windows
                 </a>
@@ -82,7 +82,7 @@
 
         </div>
         <div class="release-notes">
-            <h1>VISUALZ v2.2.4</h1>
+            <h1>VISUALZ v2.2.5</h1>
 
             <div class="">
 
@@ -92,7 +92,12 @@
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe> -->
 
-                
+                <!-- 3/17/2023 -->
+                <h2>NEW Update 2.2.5</h2>
+                <ul class='new'>
+                    <li>🪲 Bugfixes.</li>
+                    <li>🔥 More performance optimization.</li>
+                </ul>
 
                 <!-- 12/25/2022 -->
                 <h2>NEW Update 2.2.4</h2>
